[package]
name = "lpc55"
version = "0.1.0-alpha.2"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Host-side tooling to interact with LPC55 chips via the ROM bootloader"
repository = "https://github.com/lpc55/lpc55-host"
readme = "README.md"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/lpc55"
keywords = ["cortex-m", "nxp", "lpc"]
categories = ["command-line-utilities", "config", "development-tools", "embedded", "hardware-support"]
exclude = ["pkg"]

[[bin]]
name = "lpc55"
required-features = ["cli"]

[dependencies]
aes = "0.7"
anyhow = "1"
atty = "0.2.14"
base64 = "0.13"
bitflags = "1.2.1"
clap = { version = "2.33.3", default-features = false, optional = true }
ctr = "0.7"
delog = "0.1.0-alpha.2"
enum-iterator = "0.6.0"
hex = "0.4.2"
hmac = "0.11"
hidapi = { version = "1.2.3", default-features = false, features = ["linux-static-hidraw"] }
nom = { version = "6" }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.3.0"
serde_json = "1"
serde_yaml = "0.8.14"
signature = "1.3.0"
log = "0.4.11"
lazy_static = "1.4.0"
oid-registry = "0.1.1"
pem-parser = "0.1.1"
rand = "0.8.1"
rsa = "0.4"
sha2 = "0.9.2"
thiserror = "1"
tiny_http = { version = "0.8", optional = true }
toml = "0.5.7"
x509-parser = "0.9.0"
uriparse = "0.6.3"
uuid = "0.8.2"
pkcs11 = "0.5.0"
pkcs11-uri = "0.1.2"

[dev-dependencies]
insta = "1.1.0"
tempfile = "3.2.0"
assert_cmd = "1"
predicates = "1"

[build-dependencies]
clap = { version = "2.33.3", default-features = false }
lazy_static = "1.4.0"

[features]
default = ["cli"]
cli = ["clap", "http"]
http = ["tiny_http"]
# Enable tests that require a mcuboot device attached
with-device = []

[patch.crates-io]
# uriparse = { path = "../uriparse-rs" }
# pkcs11-uri = { path = "../pkcs11-uri" }
# pkcs11-uri = { git = "https://github.com/nickray/pkcs11-uri", branch = "main" }

# 20201-01-25: brings `lpc55` size on Linux from 9.3M down to 5.4M, 3.2M after stripping
# [profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1
